k8-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox-server
spec:
  selector:
    app: busybox-server
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: LoadBalancer
